sec commit